# packages/php-sdk/src/Models/Components/CreateOrderRequest.php
@@ -1,0 +1,61 @@
+<?php
+
+/**
+ * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+ */
+
+declare(strict_types=1);
+
+namespace LocalProtocol\Models\Components;
+
+
+/** CreateOrderRequest - Body for creating an order from an accepted quote. */
+class CreateOrderRequest
+{
+    /**
+     * The order request to fulfill.
+     *
+     * @var string $orderRequestId
+     */
+    #[\Speakeasy\Serializer\Annotation\SerializedName('order_request_id')]
+    public string $orderRequestId;
+
+    /**
+     * The accepted quote.
+     *
+     * @var string $orderQuoteId
+     */
+    #[\Speakeasy\Serializer\Annotation\SerializedName('order_quote_id')]
+    public string $orderQuoteId;
+
+    /**
+     * Client-generated idempotency key.
+     *
+     * @var string $nonce
+     */
+    #[\Speakeasy\Serializer\Annotation\SerializedName('nonce')]
+    public string $nonce;
+
+    /**
+     * Reference to the registered payment instrument.
+     *
+     * @var string $paymentInstrumentId
+     */
+    #[\Speakeasy\Serializer\Annotation\SerializedName('payment_instrument_id')]
+    public string $paymentInstrumentId;
+
+    /**
+     * @param  string  $orderRequestId
+     * @param  string  $orderQuoteId
+     * @param  string  $nonce
+     * @param  string  $paymentInstrumentId
+     * @phpstan-pure
+     */
+    public function __construct(string $orderRequestId, string $orderQuoteId, string $nonce, string $paymentInstrumentId)
+    {
+        $this->orderRequestId = $orderRequestId;
+        $this->orderQuoteId = $orderQuoteId;
+        $this->nonce = $nonce;
+        $this->paymentInstrumentId = $paymentInstrumentId;
+    }
+}
