# packages/php-sdk/src/Models/Operations/GetEventVocabularyResponse.php
@@ -1,0 +1,56 @@
+<?php
+
+/**
+ * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+ */
+
+declare(strict_types=1);
+
+namespace LocalProtocol\Models\Operations;
+
+use LocalProtocol\Models\Components;
+class GetEventVocabularyResponse
+{
+    /**
+     * HTTP response content type for this operation
+     *
+     * @var string $contentType
+     */
+    public string $contentType;
+
+    /**
+     * HTTP response status code for this operation
+     *
+     * @var int $statusCode
+     */
+    public int $statusCode;
+
+    /**
+     * Raw HTTP response; suitable for custom response parsing
+     *
+     * @var \Psr\Http\Message\ResponseInterface $rawResponse
+     */
+    public \Psr\Http\Message\ResponseInterface $rawResponse;
+
+    /**
+     * The event vocabulary.
+     *
+     * @var ?Components\DeliveryEventVocabulary $deliveryEventVocabulary
+     */
+    public ?Components\DeliveryEventVocabulary $deliveryEventVocabulary = null;
+
+    /**
+     * @param  string  $contentType
+     * @param  int  $statusCode
+     * @param  \Psr\Http\Message\ResponseInterface  $rawResponse
+     * @param  ?Components\DeliveryEventVocabulary  $deliveryEventVocabulary
+     * @phpstan-pure
+     */
+    public function __construct(string $contentType, int $statusCode, \Psr\Http\Message\ResponseInterface $rawResponse, ?Components\DeliveryEventVocabulary $deliveryEventVocabulary = null)
+    {
+        $this->contentType = $contentType;
+        $this->statusCode = $statusCode;
+        $this->rawResponse = $rawResponse;
+        $this->deliveryEventVocabulary = $deliveryEventVocabulary;
+    }
+}
