# packages/php-sdk/src/Models/Operations/GetOrderQuoteRequest.php
@@ -1,0 +1,40 @@
+<?php
+
+/**
+ * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+ */
+
+declare(strict_types=1);
+
+namespace LocalProtocol\Models\Operations;
+
+use LocalProtocol\Utils\SpeakeasyMetadata;
+class GetOrderQuoteRequest
+{
+    /**
+     * Order request identifier.
+     *
+     * @var string $orderRequestId
+     */
+    #[SpeakeasyMetadata('pathParam:style=simple,explode=false,name=order_request_id')]
+    public string $orderRequestId;
+
+    /**
+     * Order quote identifier.
+     *
+     * @var string $orderQuoteId
+     */
+    #[SpeakeasyMetadata('pathParam:style=simple,explode=false,name=order_quote_id')]
+    public string $orderQuoteId;
+
+    /**
+     * @param  string  $orderRequestId
+     * @param  string  $orderQuoteId
+     * @phpstan-pure
+     */
+    public function __construct(string $orderRequestId, string $orderQuoteId)
+    {
+        $this->orderRequestId = $orderRequestId;
+        $this->orderQuoteId = $orderQuoteId;
+    }
+}
