# packages/php-sdk/src/Models/Operations/ListMerchantPaymentHandlersRequest.php
@@ -1,0 +1,30 @@
+<?php
+
+/**
+ * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+ */
+
+declare(strict_types=1);
+
+namespace LocalProtocol\Models\Operations;
+
+use LocalProtocol\Utils\SpeakeasyMetadata;
+class ListMerchantPaymentHandlersRequest
+{
+    /**
+     * Merchant identifier.
+     *
+     * @var string $merchantId
+     */
+    #[SpeakeasyMetadata('pathParam:style=simple,explode=false,name=merchant_id')]
+    public string $merchantId;
+
+    /**
+     * @param  string  $merchantId
+     * @phpstan-pure
+     */
+    public function __construct(string $merchantId)
+    {
+        $this->merchantId = $merchantId;
+    }
+}
